<resources>

    <!-- // Application // -->
    <string name="app_name">MFTVWork</string>
    <string name="developer_name">Mohammad Ali Riazati</string>

    <!-- // Buttons // -->
    <string name="btn_first_exercise">تمرین اول</string>
    <string name="btn_second_exercise">تمرین دوم</string>
    <string name="btn_third_exercise">تمرین سوم</string>
    <string name="btn_confirm">تایید اطلاعات</string>

    <!-- // EditTexts Hints // -->
    <string name="edt_hint_input_first_name">نام خود را وارد کنید</string>
    <string name="edt_hint_input_last_name">نام خانوادگی خود را وارد کنید</string>
    <string name="edt_hint_input_age">سن خود را وارد کنید</string>
    <string name="edt_hint_input_phone">شماره خود را وارد کنید</string>

    <!-- // TextViews //  -->
    <string name="txt_first_name">نام:</string>
    <string name="txt_last_name">نام خانوادگی:</string>
    <string name="txt_age">سن:</string>
    <string name="txt_phone">شماره:</string>
    <string name="txt_first_quarter">First Quarter</string>
    <string name="txt_second_quarter">Second Quarter</string>
    <string name="txt_jan">JAN</string>
    <string name="txt_feb">FEB</string>
    <string name="txt_mar">MAR</string>
    <string name="txt_apr">APR</string>
    <string name="txt_may">MAY</string>
    <string name="txt_todo">TODO</string>

</resources>
