<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstExercises.SecondSection_1">

    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/edt_hint_input_first_name"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/gray400" />

    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/edt_hint_input_last_name"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/gray400" />

    <EditText
        android:id="@+id/edtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/edt_hint_input_age"
        android:inputType="number"
        android:padding="10dp"
        android:textColorHint="@color/gray400" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/edt_hint_input_phone"
        android:inputType="phone"
        android:padding="10dp"
        android:textColorHint="@color/gray400" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_button"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/btn_confirm"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>