<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstExercises.SecondSection_2">

    <LinearLayout
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtFirstName"
            android:text="@string/app_name"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@color/gray500"
            android:textStyle="italic"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/txt_first_name"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@color/gray200"
            android:textStyle="italic"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtLastName"
            android:text="@string/app_name"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@color/gray500"
            android:textStyle="italic"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/txt_last_name"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@color/gray200"
            android:textStyle="italic"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtAge"
            android:text="@string/app_name"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@color/gray500"
            android:textStyle="italic"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/txt_age"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@color/gray200"
            android:textStyle="italic"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtPhone"
            android:text="@string/app_name"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@color/gray500"
            android:textStyle="italic"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/txt_phone"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@color/gray200"
            android:textStyle="italic"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>